--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "static-site",
+  "name": "bc-markdown-generator2",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Website link",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mattlusty/bc-markdown-generator2.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+  "bugs": {
+    "url": "https://github.com/mattlusty/bc-markdown-generator2/issues"
+  },
+  "homepage": "https://github.com/mattlusty/bc-markdown-generator2#readme"
 }
