--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/mattlusty/bc-markdown-generator2/issues"
   },
-  "homepage": "https://github.com/mattlusty/bc-markdown-generator2#readme"
+  "homepage": "https://github.com/mattlusty/bc-markdown-generator2#readme",
+  "dependencies": {
+    "inquirer": "^8.0.0"
+  }
 }
